terraform/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordwizfrontend-deployment
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: wordwizfrontend
  template:
    metadata:
      labels:
        app: wordwizfrontend
    spec:
      imagePullSecrets:
        - name: ECR_REGISTRY
      containers:
      - name: wordwizfrontend
        image: 891377021221.dkr.ecr.eu-west-1.amazonaws.com/wordwiz-fe-ecr:${IMAGE_TAG}
        ports:
        - containerPort: 80
