terraform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordwizfrontend-service
spec:
  type: Load Balancer
  selector:
     app: wordwizfrontend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
