terraform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordwiz-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
       - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: wordwizfrontend-service
                  port:
                    number: 80
